Deployment/app-deploy.yaml
apiVersion: v1
items:
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node
      app.kubernetes.io/component: node
      app.kubernetes.io/instance: node
    name: node
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: node:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/thiha-thura/node-js-testing-purpose.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: node:latest
          namespace: default
      type: Docker
    triggers:
    - github:
        secret: 7kFy9fehR7_6qwi0yfJE
      type: GitHub
    - generic:
        secret: 9MlJcbwMe-0HD67aU1B-
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"node:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"node\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node
      app.kubernetes.io/component: node
      app.kubernetes.io/instance: node
    name: node
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: node
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: node
      spec:
        containers:
        - image: ' '
          name: node
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node
      app.kubernetes.io/component: node
      app.kubernetes.io/instance: node
    name: node
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: node
  status:
    loadBalancer: {}
kind: List
metadata: {}
