Deployment/route-expose.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: node
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: node
  name: node
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: ""
    name: node
    weight: null
status: {}
